# libandroid_support

./: .gitignore  Makefile.am  README.md  configure.ac
include/: .gitignore  dirent2.h  langinfo2.h  lockf2.h  pthread2.h
lib/: .gitignore  Makefile.am  dirent2.c  langinfo2.c  lockf2.c  pthread2.c
